@@ -71,6 +71,8 @@
     was created using some lxpanel_button_*() API.
 * Added "panel-font-changed" signal to LXPanel to be able follow settings
     change in font configuration of panel using lxpanel_button_*() API.
+* Fixed nasty bug with autohidden panel after unhide appeared for short
+    time somewhere at the screen.
 
 0.7.2
 -------------------------------------------------------------------------
